syntax = "proto3";

import "common/BookDate.proto";
option java_package="cn.migu.selection.proto.base";

message ComponentShowResponse{
	 string pluginCode = 1;
     string status = 2;
     string isvisable = 3;
     ComponentShowData data = 4;
     string messageDesc = 5;
}
message ComponentShowData{
	string isMarginTop =1;
	string isMarginBottom =2;
	string isPaddingTop = 3;
	string isShowLine = 4;
	string endLogo = 5;
	repeated BookDate books = 6;
}